Fix navbar overlaps, icons, and contents

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-body{padding-top:50px}.item:hover{cursor:pointer}.item:hover .container-overlay{z-index:100}.container-overlay{background-color:rgba(0,0,0,0.7);position:absolute;left:0;right:0;top:0;bottom:0;z-index:-100}.icon{width:10px;height:10px}#map{width:100%;height:400px;border-radius:10px}@media (min-width: 768px){.news-input{width:50% !important}.img-w-50{width:50% !important}}/*!
+body{padding-top:50px}section{padding-top:80px}.item:hover{cursor:pointer}.item:hover .container-overlay{z-index:100}.container-overlay{background-color:rgba(0,0,0,0.7);position:absolute;left:0;right:0;top:0;bottom:0;z-index:-100}.icon{width:10px;height:10px}#map{width:100%;height:400px;border-radius:10px}@media (min-width: 768px){.news-input{width:50% !important}.img-w-50{width:50% !important}}/*!
  * Bootstrap v5.0.1 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
  * Copyright 2011-2021 Twitter, Inc.
