--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -2,6 +2,10 @@ body {
   padding-top: 50px;
 }
 
+section {
+  padding-top: 80px;
+}
+
 .item:hover {
   cursor: pointer;
 
